--- a/src/app/modules/benefit/benefitdetais/benefitdetais.component.html
+++ b/src/app/modules/benefit/benefitdetais/benefitdetais.component.html
@@ -11,7 +11,8 @@
 
   <ngx-default-content *ngIf="!showEmpty" pageHeader="let's set up your expenses" [loading]='loading'>
   </ngx-default-content> 
-<nb-card> -->
+  -->
+<nb-card> 
 
     <nb-card-body>
         <span> back <i class="fas fa-arrow-circle-left" style="background-color: azure;padding: 0.4rem;"
