--- a/src/app/modules/benefit/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/benefit/pages/dashboard/dashboard.component.html
@@ -109,13 +109,16 @@
 <div style="margin: 0.5rem;"></div>
 <ngx-componentsheader pageName="Benefit Coverages" [requiredButton]="topActionButtons" (buttonClick)='modal($event)'>
 </ngx-componentsheader>
-
-<div class="row">
-  <div class="col-sm-4" *ngFor="let a of allBenefito" style="padding: 0px;"  [routerLink]="['/benefits/BenefitDetails',a.id]">
+<ngx-default-content *ngIf="showEmpty" pageHeader="Benefit Coverages"
+pageDescription="No record found"  [loading]="loading"
+>
+</ngx-default-content>
+<div class="row" *ngIf="!showEmpty">
+  <div class="col-sm-4" *ngFor="let a of allBenefito" style="padding: 0px;cursor: pointer;"  [routerLink]="['/benefits/BenefitDetails',a.id]">
     <div style="margin: 15px;">
       <div class="card" style="display: flex; flex-direction: row; padding: 1rem;">
         <div style="margin-right: 1rem;">
-          <img style="height: 3rem; width: 3rem;" src="https://homepages.cae.wisc.edu/~ece533/images/airplane.png">
+          <img style="height: 3rem; width: 3rem;" src="assets/icons/CareerSuccession.jpg">
         </div>
         <div style="display: flex; flex-direction: row;">
           <div style="display: flex; flex-direction: column;">
