Updated applicant sign in

--- a/src/app/modules/applicant-module/applicant-module.component.html
+++ b/src/app/modules/applicant-module/applicant-module.component.html
@@ -12,30 +12,29 @@
       </div>
       <div style="padding: 20px;"></div>
 
-      <div class="employment-type">
+      <div class="form-group">
           <h6>Type of Employment</h6>
           <nb-checkbox>Full Time</nb-checkbox><br>
           <nb-checkbox>Part Time</nb-checkbox><br>
           <nb-checkbox>Remote</nb-checkbox><br>
           <nb-checkbox>Contract</nb-checkbox><br>
       </div>
-      <div style="padding: 20px;"></div>
-        <div class="level">
-          <h6>Type of Employment</h6>
+
+        <div class="form-group">
+          <h6>Level</h6>
           <nb-checkbox>Entry Level</nb-checkbox><br>
           <nb-checkbox>Mid Level</nb-checkbox><br>
           <nb-checkbox>Intermediate Level</nb-checkbox><br>
           <nb-checkbox>Senior Level</nb-checkbox><br>
         </div>
 
-        <div style="padding: 20px;"></div>
-          <div class="industry">
-            <h6>Type of Employment</h6>
-            <nb-checkbox>Banking</nb-checkbox><br>
-            <nb-checkbox>Oil & Gas</nb-checkbox><br>
-            <nb-checkbox>Technology</nb-checkbox><br>
-            <nb-checkbox>Finannce</nb-checkbox><br>
-          </div>
+        <div class="form-group">
+          <h6>Industry</h6>
+          <nb-checkbox>Banking</nb-checkbox><br>
+          <nb-checkbox>Oil & Gas</nb-checkbox><br>
+          <nb-checkbox>Technology</nb-checkbox><br>
+          <nb-checkbox>Finannce</nb-checkbox><br>
+        </div>
 
     </div>
   </div>
