--- a/src/app/components/componentsheader/componentsheader.component.html
+++ b/src/app/components/componentsheader/componentsheader.component.html
@@ -1,8 +1,14 @@
 <div class="row">
   <div class="col-sm-6">
-    <div style="padding-top: 10px">
-      <h6 class="header4-bold">{{ pageName }}</h6>
+    <div style="display: flex;flex-direction: column;">
+      <div style="padding-top: 10px">
+        <h6 class="header4-bold">{{ pageName }}</h6>
+      </div>
+      <span *ngIf="showbackbutton" style="cursor: pointer;font-size: 18px;" (click)="backbuttonClick.emit('back')">
+      <i class="fa fa-arrow-circle-left" style="padding: 0.4rem;"></i>&nbsp;Back 
+</span>
     </div>
+  
   </div>
   <div class="col-sm-6">
     <div style="float: right; padding: 5px">
